public/styles/global.css
html {
    margin:    0 auto;
    max-width: 800px;
    background-color: var(--background-color);
    color: var(--text-color);
}

body {
    font-family: var(--font-system);
    font-weight: normal;
    margin: 1.5em;
}

a, a:hover {
    color: var(--link-color);
}

header {
    margin-bottom: 1.5em;
}

h1, h2, h3, h4, p {
    margin-bottom: 0.5em;
}

h2 {
    margin-top: 1em;
}

h3 {
    margin-top: 1em;
}

ul {
    padding-left: 2em;
    margin-top: 0.5em;
}

ul ul {
    margin-top: 0;
}

dl {
    padding-left: 1.5em;
}

dt {
    margin: 0.5em 0;
}

dd {
    margin-left: 1.5em;
    margin-bottom: 1em;
}

nav ol {
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
    align-items: center;
    margin: 1em 0;
    padding: 0;
    list-style-type: none;
}

nav li {
    display: inline-block;
    padding: 0.5em 0.7em;
    border: none;
    background-color: var(--nav-background-color);
    border-left: 2px solid var(--nav-separator-color);
    border-bottom: 2px solid var(--background-color);
}

nav li a {
    color: inherit;
}

code {
    color: var(--code-text-color);
    background-color: var(--code-text-color-bg);
    padding: 0.15em 0.25em;
    overflow-wrap: break-word;
    font-family: var(--font-system-code);
    font-size: var(--font-system-code-size);
}

x-code-viewer {
    border: 1px solid var(--border-color);
    margin: 1em 0;
    min-height: 6em;
    max-height: 30em;
}

x-tab-panel {
    border: 1px solid var(--border-color);
    margin: 1em 0;
    min-height: 8em;
}

x-tab-panel x-code-viewer {
    border: none;
    margin: 0;
}

iframe {
    display: block;
    width: 100%;
    margin: 1em 0;
}

aside {
    border: 1px dotted var(--border-color);
    margin: 2em 0;
    padding-bottom: 0.5em;
}

aside h3, 
aside h4 {
    color: var(--panel-title-color);
    background-color: var(--panel-title-color-bg);
    padding: 1em;
    font-size: 100%;
    margin: 0;
}

aside p {
    margin: 1em;
    margin-bottom: 0.5em;
}

aside x-code-viewer {
    margin: 1em;
}

footer {
    margin: 2.5em 0;
    text-align: center;
}

footer .contact a {
    color: inherit;
    background-repeat: no-repeat;
    background-position: center left;
    background-size: contain;
    margin: 0 0.5em;
}

footer .contact a:hover {
    color: var(--link-color);
}

hr {
    border: none;
    border-top: 1px dotted var(--border-color);
    margin: 2em auto;
    width: 50%;
}

section {
    position: relative;
}

a.section-anchor {
    color: inherit;
    display: none;
    position: absolute;
    left: -1.5em;
    padding-left: 0.6em;
    font-size: 120%;
    top: 0;
    padding-top: 0.2em;
    width: 1.5em;
    height: 3em;
    opacity: 0.4;
}

section:hover > a.section-anchor {
    display: inline;
}

section:hover > a.section-anchor:hover {
    opacity: 1;
    color: var(--link-color);
}

blockquote {
    border-left: 10px solid var(--nav-background-color);
    margin: 1.5em 0 1em 0.5em;
    padding: 0.5em 10px;
    quotes: "\201C""\201D""\2018""\2019";
    color: var(--text-color-mute);
    font-size: 90%;
}

cite {
    display: block;
    margin: 0 0 1em 0.5em;
}

table {
    margin-bottom: 1em;
}

